feat(annotation): 实现角度标注功能并优化注解策略
- 实现角度弧线绘制功能，包括角度计算、弧线半径确定和绘制逻辑
- 修复角度标注时的顶点角度计算和弧线绘制算法
- 优化注解策略中的半径和面积标注验证逻辑
- 更新实例检查语法使用现代